--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,7 @@
----
-layout: default
----
+<section>
+  <h1>{{ page.title }}</h1>
 
-<div class="post">
+  {{ content }}
 
-    <h2>{{ page.title }}</h2>
-
-	<div class="entry">{{ content }}</div>
-
-</div>
-
+  {% include JB/comments %}
+</section>
