--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,7 @@
----
-layout: default
----
+<section>
+  <h1>{{ page.title }}</h1>
 
-<article>
-        <header>
-            <h2>{{ page.title }}</h2>
-            <span><i class="icon-clock"></i><time datetime="{{page.date|date:"%F"}}">{{page.date|date:"%b %d, %Y"}}</time></span><br/>
-            <span class="category"><i class="icon-tag"></i> {{ page.categories | category_links }}</span><br/>
-            <span class="author"><i class="icon-user"></i> {% if page.author %}{{page.author}}{% else %}{{site.author}}{% endif%}</span>
-        </header>
+  {{ content }}
 
-        <div class="entry">{{ content }}</div>
-
-        <footer><!-- additional info --></footer>
-
-</article>
-
+  {% include JB/comments %}
+</section>
