--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
+﻿@import url(https://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
 
 /* MeyerWeb Reset */
 
@@ -34,7 +34,7 @@ body {
 	margin: 0;
 	line-height: 1.8em;
 	-webkit-font-smoothing: antialiased;
-	
+
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -43,11 +43,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, ul, ol, table, dl {
-  margin:0 0 22px;
+	margin: 0 0 22px;
+	table-layout: auto;
 }
 
 h1, h2, h3 {
-	font-family: 'Arvo', Monaco, serif;
+	font-family: Arvo, Monaco, serif;
   line-height:1.3;
 	font-weight: normal;
 }
@@ -55,7 +56,7 @@ h1, h2, h3 {
 h1,h2, h3 {
 	display: block;
 	border-bottom: 1px solid #ccc;
-	padding-bottom: 5px;	
+	padding-bottom: 5px;
 }
 
 h1 {
@@ -71,7 +72,7 @@ h3 {
 }
 
 h4, h5, h6 {
-	font-family: 'Arvo', Monaco, serif;
+	font-family: Arvo, Monaco, serif;
 	font-weight: 700;
 }
 
@@ -97,14 +98,16 @@ strong {
   font-weight:700;
 }
 
-ul li {
-  list-style: inside;
+ul {
+  list-style-position: inside;
+  list-style: disc;
   padding-left: 25px;
 }
 
-ol li {
-  list-style: decimal inside;
-  padding-left: 20px;
+ol {
+  list-style-position: inside;
+  list-style: decimal;
+  padding-left: 25px;
 }
 
 blockquote {
@@ -149,17 +152,26 @@ img {
   border: 1px solid #ccc;
 }
 
+p img {
+  display: inline;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+  text-align: center;
+  border: none;
+}
 
 /* Code blocks */
 
 code, pre {
 	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color:#000;
   font-size:14px;
 }
 
 pre {
 	padding: 4px 12px;
-  background: #FDFEFB;  
+  background: #FDFEFB;
   border-radius:4px;
   border:1px solid #D7D8C8;
   overflow: auto;
@@ -170,15 +182,6 @@ pre {
 
 /* Tables */
 
-table {
-  width:100%;
-}
-
-table {
-  border: 1px solid #ccc;
-  margin-bottom: 32px;
-  text-align: left;
- }
 
 th {
   font-family: 'Arvo', Helvetica, Arial, sans-serif;
@@ -191,7 +194,7 @@ th {
 
 td {
   padding: 10px;
-	background: #ccc;
+	background: #fff;
  }
 
 
@@ -226,7 +229,7 @@ p.header {
 }
 
 h1.header {
-	font-family: 'Arvo', sans-serif;
+	font-family: Arvo, sans-serif;
 	font-size: 30px;
 	font-weight: 300;
 	line-height: 1.3em;
@@ -267,13 +270,13 @@ header li {
   background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
   background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
   background: linear-gradient(top, #AF0011 0%,#820011 100%);
-  
+
 	border-radius:4px;
   border:1px solid #0D0D0D;
 
 	-webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
 	box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
-	
+
 }
 
 header li:hover {
@@ -325,12 +328,12 @@ footer {
 }
 
 @media print, screen and (max-width: 960px) {
-  
+
   div.wrapper {
     width:auto;
     margin:0;
   }
-  
+
   header, section, footer {
     float:none;
     position:static;
@@ -342,20 +345,20 @@ footer {
 		margin:0 84px 0 50px;
 		padding:0;
 	}
-  
+
   header {
     padding-right:320px;
   }
-  
+
   section {
     padding:20px 84px 20px 50px;
     margin:0 0 20px;
   }
-  
+
   header a small {
     display:inline;
   }
-  
+
   header ul {
     position:absolute;
     right:130px;
@@ -367,7 +370,7 @@ footer {
   body {
     word-wrap:break-word;
   }
-  
+
   header {
     padding:10px 20px 0;
 		margin-right: 0;
@@ -378,25 +381,25 @@ footer {
     margin:0 0 30px;
   }
 
-	footer {		
+	footer {
 		margin: 0 0 0 30px;
 	}
-  
+
   header ul, header p.view {
     position:static;
   }
 }
 
 @media print, screen and (max-width: 480px) {
-  
+
   header ul li.download {
     display:none;
   }
 
-	footer {		
+	footer {
 		margin: 0 0 0 20px;
 	}
-	
+
 	footer a{
 		display:block;
 	}
