--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   margin:36px 0 10px;
 }
 
-p, ul, ol, table, dl {
+p, ul, ol, dl {
 	margin: 0 0 22px;
 	table-layout: auto;
 }
@@ -193,7 +193,7 @@ th {
  }
 
 td {
-  padding: 10px;
+  padding: 1px;
 	background: #fff;
  }
 
